--- a/app/src/main/res/drawable/my_gradient_drawable.xml
+++ b/app/src/main/res/drawable/my_gradient_drawable.xml
@@ -3,7 +3,7 @@
     <gradient
         android:type="linear"
         android:angle="135"
-        android:startColor="#2980B9"
+        android:startColor="#61fff0"
         android:endColor="#05d8c4"
         android:gradientRadius="1%p"/>
 </shape>
