--- a/app/src/main/res/layout/activity_admin_homepage.xml
+++ b/app/src/main/res/layout/activity_admin_homepage.xml
@@ -5,6 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/red_bg"
-    tools:context=".AdminHomepage">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".AdminHomepage"/>
