--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,8 +52,8 @@
         android:background="@drawable/custom_input_white_blue"
         android:drawablePadding="12dp"
         android:ems="10"
-        android:hint="\tEnter Email"
-        android:inputType="textPersonName"
+        android:hint="Email"
+        android:paddingLeft="10dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,8 +72,8 @@
         android:background="@drawable/custom_input_white_blue"
         android:drawablePadding="12dp"
         android:ems="10"
-        android:hint="\tEnter Password"
-        android:inputType="textPersonName"
+        android:hint="Password"
+        android:paddingLeft="10dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
