signup n  login dr n patient

--- a/app/src/main/res/layout/activity_admin_progress_chart_patient_data.xml
+++ b/app/src/main/res/layout/activity_admin_progress_chart_patient_data.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/red_bg"
-    tools:context=".AdminExercisePrescription">
+    tools:context=".AdminProgressChartPatientData">
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/submitBtn"
+        android:id="@+id/editBtn"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="60dp"
@@ -16,7 +16,7 @@
         android:layout_marginEnd="60dp"
         android:background="@drawable/custom_button"
         android:backgroundTint="@color/blue"
-        android:text="SUBMIT"
+        android:text="EDIT DATA"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:textStyle="bold"
