--- a/app/src/main/res/layout/activity_admin_progress_chart_list.xml
+++ b/app/src/main/res/layout/activity_admin_progress_chart_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/red_bg"
     tools:context=".AdminProgressChartList">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
