--- a/app/src/main/res/layout/activity_sign_up_choose_account.xml
+++ b/app/src/main/res/layout/activity_sign_up_choose_account.xml
@@ -4,8 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/red_bg"
-    tools:context=".AdminProgressChartOption">
+    android:background="@drawable/my_gradient_drawable"
+    tools:context=".SignUpChooseAccount">
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_input_blue"
+        android:drawablePadding="6dp"
+        android:fontFamily="sans-serif-medium"
+        android:paddingLeft="12dp"
+        android:paddingTop="12dp"
+        android:paddingRight="12dp"
+        android:paddingBottom="12dp"
+        android:text="CHOOSE\nACCOUNT"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.105" />
 
     <LinearLayout
         android:layout_width="391dp"
@@ -20,33 +43,33 @@
         app:layout_constraintVertical_bias="0.5">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/patientCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
             android:layout_margin="20dp"
             app:cardCornerRadius="20dp"
-            android:background="@color/grey">
+            android:background="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/grey"
+                android:background="@color/white"
                 android:padding="20dp"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/imageView5"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center"
-                    app:srcCompat="@drawable/exercise_data_logo" />
+                    app:srcCompat="@drawable/patient_logo" />
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Exercise Data"
+                    android:text="Patient"
                     android:textColor="@color/maroon"
                     android:textSize="18dp"
                     android:textStyle="bold" />
@@ -54,68 +77,33 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/doctorCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
             android:layout_margin="20dp"
-            app:cardCornerRadius="20dp"
-            android:background="@color/grey">
+            app:cardCornerRadius="20dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/grey"
+                android:background="@color/maroon"
                 android:padding="20dp"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/imageView6"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center"
-                    app:srcCompat="@drawable/progress_chart_admin_logo" />
+                    app:srcCompat="@drawable/doctor_logo" />
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Health Data"
-                    android:textColor="@color/maroon"
-                    android:textSize="18dp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:layout_margin="20dp"
-            app:cardCornerRadius="20dp"
-            android:background="@color/grey">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/grey"
-                android:padding="20dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView7"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center"
-                    app:srcCompat="@drawable/exercise_prescription_admin_logo" />
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Exercise Prescription"
-                    android:textColor="@color/maroon"
+                    android:text="Doctor"
+                    android:textColor="@color/white"
                     android:textSize="18dp"
                     android:textStyle="bold" />
             </LinearLayout>
