--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="maroon">#af0222</color>
     <color name="blue">#21519d</color>
     <color name="teal">#05d8c4</color>
+    <color name="grey">#f0f0f0</color>
 </resources>
