--- a/app/src/main/res/layout/activity_admin_homepage.xml
+++ b/app/src/main/res/layout/activity_admin_homepage.xml
@@ -20,6 +20,7 @@
         app:layout_constraintVertical_bias="0.5">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/exercisePCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
@@ -34,14 +35,12 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView5"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center"
                     app:srcCompat="@drawable/exercise_prescription_admin_logo" />
 
                 <TextView
-                    android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -53,6 +52,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/progressCCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
@@ -67,14 +67,12 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView6"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center"
                     app:srcCompat="@drawable/progress_chart_admin_logo" />
 
                 <TextView
-                    android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
