--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,6 +53,7 @@
         android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Email"
+        android:textColorHint="@color/grey"
         android:paddingLeft="10dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -73,6 +74,7 @@
         android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Password"
+        android:textColorHint="@color/grey"
         android:paddingLeft="10dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
