--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="blue">#21519d</color>
     <color name="teal">#05d8c4</color>
     <color name="grey">#f0f0f0</color>
+    <color name="transparent">#00000000</color>
 </resources>
