--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -4,21 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="12dp"
+    android:padding="10dp"
     android:background="@color/blue"
     android:layout_gravity="center_vertical">
 
     <ImageView
         android:id="@+id/menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="match_parent"
         android:src="@drawable/ic_baseline_menu_24"/>
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="Navigation Drawer"
         android:textStyle="bold"
         android:textSize="22sp"
@@ -28,8 +27,8 @@
 
     <ImageView
         android:id="@+id/logoutBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="match_parent"
         app:srcCompat="@drawable/baseline_logout_24" />
 
 
