user navigation drawer

--- a/app/src/main/res/layout/main_navigation_drawer.xml
+++ b/app/src/main/res/layout/main_navigation_drawer.xml
@@ -277,17 +277,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="15dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/homepageBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
+            android:paddingBottom="15dp"
             android:orientation="horizontal">
 
             <ImageView
+                android:paddingTop="15dp"
+                android:paddingLeft="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/homepage_icon" />
@@ -296,6 +297,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="5dp"
+                android:paddingTop="15dp"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/maroon"
                 android:textStyle="bold"
@@ -306,10 +308,12 @@
             android:id="@+id/messageBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
+            android:paddingBottom="15dp"
             android:orientation="horizontal">
 
             <ImageView
+                android:paddingLeft="15dp"
+                android:paddingTop="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/message_icon" />
@@ -318,6 +322,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="5dp"
+                android:paddingTop="15dp"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/maroon"
                 android:textStyle="bold"
@@ -328,10 +333,12 @@
             android:id="@+id/aboutBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
+            android:paddingBottom="15dp"
             android:orientation="horizontal">
 
             <ImageView
+                android:paddingLeft="15dp"
+                android:paddingTop="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/about_icon" />
@@ -340,6 +347,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="5dp"
+                android:paddingTop="15dp"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/maroon"
                 android:textStyle="bold"
@@ -350,10 +358,12 @@
             android:id="@+id/updatePBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
+            android:paddingBottom="15dp"
             android:orientation="horizontal">
 
             <ImageView
+                android:paddingLeft="15dp"
+                android:paddingTop="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/setting_icon" />
@@ -362,6 +372,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="5dp"
+                android:paddingTop="15dp"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/maroon"
                 android:textStyle="bold"
